--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,4 @@
-GITHUB_ORG=abirismyname
+GITHUB_ORG=eprice555
 GITHUB_REPO=amplify-ecs-fargate
 ROLE_NAME=amplify-oidc-user-role
 ECR_REPO=amplify-app
